syntax = "proto3";

package reservation.v1;

import "room/v1/room.proto";
import "user/v1/user.proto";
import "google/protobuf/timestamp.proto";

service ReservationService {
    rpc GetReservation(GetReservationRequest) returns (GetReservationResponse);
    rpc ListReservations(ListReservationsRequest) returns (ListReservationsResponse);
    rpc CreateReservation(CreateReservationRequest) returns (CreateReservationResponse);
    rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse);
}

message Reservation {
    string id = 1;
    optional string official_site_id = 2;
    user.v1.User user = 3;
    room.v1.CampusType campus_type = 4;
    string room_id = 5;
    string date = 6;
    int32 from_hour = 7;
    int32 from_minute = 8;
    int32 to_hour = 9;
    int32 to_minute = 10;
    google.protobuf.Timestamp create_time = 11;
}

message GetReservationRequest {
    string reservation_id = 1;
}

message GetReservationResponse {
    Reservation reservation = 1;
}

message ListReservationsRequest {
    // TODO: Add filtering options (e.g., by campus, date...)
}

message ListReservationsResponse {
    repeated Reservation reservations = 1;
}

message CreateReservationRequest {
    room.v1.CampusType campus_type = 1;
    string date = 2;
    int32 from_hour = 3;
    int32 from_minute = 4;
    int32 to_hour = 5;
    int32 to_minute = 6;
    string room_id = 7;
}

message CreateReservationResponse {
    Reservation reservation = 1;
}

message DeleteReservationRequest {
    string reservation_id = 1;
}

message DeleteReservationResponse {}
